<resources>
    <string name="app_name">StudentData</string>
    <string name="action_settings">Settings</string>
    <!-- menu items -->
    <string name="action_about">About</string>

    <!-- about dialog -->
    <string name="about">About</string>
    <string name="author">Dhruv, Sheridan College, 2020</string>

    <!-- input/output labels -->
    <string name="name_label">Name</string>
    <string name="program_label">Program</string>

    <!-- button labels -->
    <string name="submit">Submit</string>
    <string name="back">Back</string>

    <!-- default text input -->
    <string name="student_name">Student Name</string>

    <!-- default output -->
    <string name="undefined">Undefined</string>

    <!-- validation error -->
    <string name="required">required</string>
    <string name="international">International</string>
    <string name="notInternational">Not International</string>

    <!-- floating label -->
    <string name="sheridan">Sheridan, 2020</string>

</resources>